# nyc-yellow-taxi-public-data-analyzer

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  _manual_land_test.py  pyproject.toml
.claude/skills/mentor/: SKILL.md
.github/workflows/: ci.yml
pipeline/extract/: tlc_client.py
pipeline/land/: s3_client.py
pipeline/transform/: transformer.py
pipeline/utils/: config.py
scripts/: generate_test_fixture.py  run_transform_manual.py
tests/extract/: test_tlc_client.py
tests/land/: conftest.py  test_s3_client.py
tests/transform/: conftest.py  test_transformer.py
tests/transform/fixtures/: sample_trips.parquet
